@@ -3,12 +3,18 @@ package edu.colorado.phet.fluidpressureandflow.fluidflow.view;
 
 import javax.swing.*;
 
+import edu.colorado.phet.common.phetcommon.model.property.SettableProperty;
 import edu.colorado.phet.common.phetcommon.view.VerticalLayoutPanel;
+import edu.colorado.phet.common.phetcommon.view.controls.PropertyRadioButton;
 import edu.colorado.phet.fluidpressureandflow.common.FPAFStrings;
 import edu.colorado.phet.fluidpressureandflow.common.FluidPressureAndFlowModule;
 import edu.colorado.phet.fluidpressureandflow.common.model.FluidPressureAndFlowModel;
+import edu.colorado.phet.fluidpressureandflow.common.model.units.UnitSet;
 import edu.colorado.phet.fluidpressureandflow.common.view.CheckBox;
 import edu.colorado.phet.fluidpressureandflow.common.view.EnglishMetricControlPanel;
+
+import static edu.colorado.phet.fluidpressureandflow.common.FPAFStrings.ENGLISH;
+import static edu.colorado.phet.fluidpressureandflow.common.FPAFStrings.METRIC;
 
 /**
  * @author Sam Reid
@@ -16,7 +22,13 @@ import edu.colorado.phet.fluidpressureandflow.common.view.EnglishMetricControlPa
 public class FluidFlowControlPanel<T extends FluidPressureAndFlowModel> extends VerticalLayoutPanel {
     public FluidFlowControlPanel( final FluidPressureAndFlowModule<T> module ) {
         addControlFullWidth( new CheckBox( FPAFStrings.RULER, module.rulerVisible ) );
-        addControlFullWidth( new EnglishMetricControlPanel<T>( module.getFluidPressureAndFlowModel() ) );
+        SettableProperty<UnitSet> units = module.getFluidPressureAndFlowModel().units;
+
+        //Units control panel that allows choice between english and metric
+        addControlFullWidth( new EnglishMetricControlPanel<T>(
+                new PropertyRadioButton<UnitSet>( ENGLISH, units, UnitSet.ENGLISH ),
+                new PropertyRadioButton<UnitSet>( METRIC, units, UnitSet.METRIC ) )
+        );
     }
 
     private void addControlFullWidth( JComponent component ) {
