@@ -4,6 +4,7 @@ package edu.colorado.phet.fluidpressureandflow.fluidpressure;
 import edu.colorado.phet.fluidpressureandflow.common.model.Balloon;
 import edu.colorado.phet.fluidpressureandflow.common.model.FluidPressureAndFlowModel;
 import edu.colorado.phet.fluidpressureandflow.common.model.PressureSensor;
+import edu.colorado.phet.fluidpressureandflow.common.model.units.UnitSet;
 
 /**
  * @author Sam Reid
@@ -12,6 +13,7 @@ public class FluidPressureModel extends FluidPressureAndFlowModel {
     private Pool pool = new Pool();
 
     public FluidPressureModel() {
+        super( UnitSet.ATMOSPHERES );
         addPressureSensor( new PressureSensor( this, 1, 0 ) );
         addPressureSensor( new PressureSensor( this, -4, 2 ) );//Show second pressure sensor at a y location that yields a different pressure value
         addBalloon( new Balloon( this, 3, 2 ) );
