@@ -5,7 +5,10 @@ import java.awt.*;
 
 import javax.swing.*;
 
+import edu.colorado.phet.common.phetcommon.model.property.SettableProperty;
 import edu.colorado.phet.common.phetcommon.view.VerticalLayoutPanel;
+import edu.colorado.phet.common.phetcommon.view.controls.PropertyRadioButton;
+import edu.colorado.phet.fluidpressureandflow.common.model.units.UnitSet;
 import edu.colorado.phet.fluidpressureandflow.common.view.CheckBox;
 import edu.colorado.phet.fluidpressureandflow.common.view.EnglishMetricControlPanel;
 
@@ -21,7 +24,13 @@ public class WaterTowerControlPanel extends VerticalLayoutPanel {
         //Measuring devices and units
         add( new CheckBox( RULER, module.rulerVisible ) );
         add( new CheckBox( MEASURING_TAPE, module.measuringTapeVisible ) );
-        add( new EnglishMetricControlPanel<WaterTowerModel>( module.getFluidPressureAndFlowModel() ) );
+
+        //Units control panel that allows choice between english and metric
+        SettableProperty<UnitSet> units = module.getFluidPressureAndFlowModel().units;
+        add( new EnglishMetricControlPanel<WaterTowerModel>(
+                new PropertyRadioButton<UnitSet>( ENGLISH, units, UnitSet.ENGLISH ),
+                new PropertyRadioButton<UnitSet>( METRIC, units, UnitSet.METRIC ) )
+        );
 
         //Separator
         add( Box.createRigidArea( new Dimension( 5, 5 ) ) );//separate the "hose" control a bit from the other controls so it is easier to parse visually
