@@ -12,6 +12,7 @@ import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.fluidpressureandflow.common.model.FluidPressureAndFlowModel;
 import edu.colorado.phet.fluidpressureandflow.common.model.PressureSensor;
 import edu.colorado.phet.fluidpressureandflow.common.model.VelocitySensorContext;
+import edu.colorado.phet.fluidpressureandflow.common.model.units.UnitSet;
 
 /**
  * Model class for the water tower, which has a water tower that the user can raise/lower and empty/fill.
@@ -29,6 +30,7 @@ public class WaterTowerModel extends FluidPressureAndFlowModel implements Veloci
     private ArrayList<SimpleObserver> velocityUpdateListeners = new ArrayList<SimpleObserver>();
 
     public WaterTowerModel() {
+        super( UnitSet.ENGLISH );
         //Add the pressure and velocity sensors
         addPressureSensor( new PressureSensor( this, 29, 20.1 ) );
         addPressureSensor( new PressureSensor( this, 29, 26.5 ) );
